logs/denim.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/denim'...
Compiling './lib/python3.5/site-packages/denim/api.py'...
***   File "./lib/python3.5/site-packages/denim/api.py", line 31
    print """
Common operations with Denim (%(version)s).

Provision server:
> fab {%(environments)s} init

Deploy (require a source control revision to be supplied. i.e. master):
> fab {%(environments)s} deploy:{revision}

Status of service:
> fab {%(environments)s} service.status

""" % {
             
                                           

                 
                             

                                                                       
                                          

                  
                                       

  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/denim/django'...
Compiling './lib/python3.5/site-packages/denim/environment.py'...
***   File "./lib/python3.5/site-packages/denim/environment.py", line 31
    print colors.cyan('* Deployment environment set to: %s' % self.name)
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/denim/package'...
Compiling './lib/python3.5/site-packages/denim/recipes.py'...
***   File "./lib/python3.5/site-packages/denim/recipes.py", line 114
    print colors.yellow("* Check correct packages are installed.")
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/denim/scaffold'...
Listing './lib/python3.5/site-packages/denim/scm'...
Listing './lib/python3.5/site-packages/denim/service'...
Compiling './lib/python3.5/site-packages/denim/service/supervisor.py'...
***   File "./lib/python3.5/site-packages/denim/service/supervisor.py", line 63
    print colors.green("Service is Up")
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/denim/webserver'...
Listing './lib/python3.5/site-packages/denim-0.1.2b1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
